<resources>
    <string name="app_name">Mad Level 5 Task 2</string>
    <string name="game_backlog_title">Game Backlog</string>
    <string name="delete_games">Delete games</string>
    <string name="add_game">Add game</string>

    <string name="release_date">Release: %1$s</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="delete_all_games">Delete All Games</string>
    <string name="game_backlog">Game Backlog</string>
    <string name="add_game_error_msg">Input field(s) are not filled in correctly, please the input fields and try again.</string>
    <string name="successfully_deleted_game">Successfully deleted game</string>
    <string name="undo">UNDO</string>
    <string name="save">Save</string>
</resources>